; ModuleID = '/home/carl/AnghaBench/pifs/src/extr_πfs.c_pifs_opendir.c'
source_filename = "/home/carl/AnghaBench/pifs/src/extr_\CF\80fs.c_pifs_opendir.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fuse_file_info = type { i64 }

@full_path = common dso_local global i32 0, align 4
@errno = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, %struct.fuse_file_info*)* @pifs_opendir to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pifs_opendir(i8* %0, %struct.fuse_file_info* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca %struct.fuse_file_info*, align 8
  %5 = alloca i32*, align 8
  store i8* %0, i8** %3, align 8
  store %struct.fuse_file_info* %1, %struct.fuse_file_info** %4, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = call i32 @FULL_PATH(i8* %6)
  %8 = load i32, i32* @full_path, align 4
  %9 = call i32* @opendir(i32 %8)
  store i32* %9, i32** %5, align 8
  %10 = load i32*, i32** %5, align 8
  %11 = ptrtoint i32* %10 to i64
  %12 = load %struct.fuse_file_info*, %struct.fuse_file_info** %4, align 8
  %13 = getelementptr inbounds %struct.fuse_file_info, %struct.fuse_file_info* %12, i32 0, i32 0
  store i64 %11, i64* %13, align 8
  %14 = load i32*, i32** %5, align 8
  %15 = icmp ne i32* %14, null
  br i1 %15, label %19, label %16

16:                                               ; preds = %2
  %17 = load i32, i32* @errno, align 4
  %18 = sub nsw i32 0, %17
  br label %20

19:                                               ; preds = %2
  br label %20

20:                                               ; preds = %19, %16
  %21 = phi i32 [ %18, %16 ], [ 0, %19 ]
  ret i32 %21
}

declare dso_local i32 @FULL_PATH(i8*) #1

declare dso_local i32* @opendir(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
